Rules engine implemented and working on testing

--- a/ConsoleApplication1.csproj
+++ b/ConsoleApplication1.csproj
@@ -39,6 +39,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,37 +48,59 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Handlers\IPointConfigurationProvider.cs" />
-    <Compile Include="PointConfiguration.cs" />
-    <Compile Include="Handlers\ServiceFabricPointConfigurationProvider.cs" />
+    <Compile Include="CompositionRoot\Bootstrapper.cs" />
+    <Compile Include="Handlers\DigitalFallingEdgeRuleHandler.cs" />
+    <Compile Include="Handlers\HighWarningRulePostHandler.cs" />
+    <Compile Include="Handlers\HighWarningRulePreHandler.cs" />
+    <Compile Include="Handlers\LowAlarmRuleHandler.cs" />
+    <Compile Include="Handlers\LowAlarmRulePostHandler.cs" />
+    <Compile Include="Handlers\LowAlarmRulePreHandler.cs" />
+    <Compile Include="Handlers\LowWarningRuleHandler.cs" />
+    <Compile Include="Handlers\LowWarningRulePostHandler.cs" />
+    <Compile Include="Handlers\LowWarningRulePreHandler.cs" />
+    <Compile Include="Handlers\DigitalRisingEdgeRuleHandler.cs" />
+    <Compile Include="Handlers\HighWarningRuleHandler.cs" />
+    <Compile Include="Interfaces\IRuleContextProvider.cs" />
+    <Compile Include="Interfaces\IRuleContext.cs" />
+    <Compile Include="DoubleRuleContext.cs" />
+    <Compile Include="RuleContextProvider.cs" />
+    <Compile Include="PointRules\DigitalFallingEdgeRuleExecutor.cs" />
+    <Compile Include="PointRules\LowAlarmRuleExecutor.cs" />
+    <Compile Include="PointRules\LowWarningRuleExecutor.cs" />
     <Compile Include="RuleEngine\DoubleEqualToCondition.cs" />
+    <Compile Include="RuleEngine\DoubleEqualToRule.cs" />
     <Compile Include="RuleEngine\DoubleEqualToRuleFactory.cs" />
     <Compile Include="RuleEngine\DoubleGreaterThanCondition.cs" />
     <Compile Include="RuleEngine\DoubleGreaterThanEqualToRule.cs" />
     <Compile Include="RuleEngine\DoubleGreaterThanEqualToRuleFactory.cs" />
+    <Compile Include="RuleEngine\DoubleGreaterThanRule.cs" />
+    <Compile Include="RuleEngine\DoubleGreaterThanRuleFactory.cs" />
+    <Compile Include="RuleEngine\DoubleLessThanCondition.cs" />
+    <Compile Include="RuleEngine\DoubleLessThanRule.cs" />
+    <Compile Include="RuleEngine\DoubleLessThanRuleFactory.cs" />
     <Compile Include="RuleEngine\IntegerLessThanRuleFactory.cs" />
     <Compile Include="Interfaces\IRuleFactory.cs" />
-    <Compile Include="PointRules\PointAlarmRuleRequest.cs" />
-    <Compile Include="PointRules\PointValueChangedRuleRequest.cs" />
-    <Compile Include="PointRules\PointWarningRuleRequest.cs" />
+    <Compile Include="PointRules\HighAlarmRuleExecutor.cs" />
+    <Compile Include="PointRules\DigitalRisingEdgeRuleExecutor.cs" />
+    <Compile Include="PointRules\HighWarningRuleExecutor.cs" />
     <Compile Include="Interfaces\IRuleEngine.cs" />
     <Compile Include="Interfaces\RuleEngine.cs" />
-    <Compile Include="Interfaces\IRequest.cs" />
-    <Compile Include="PointRuleMediatorPipeline.cs" />
-    <Compile Include="RuleEngine\RuleRequest.cs" />
-    <Compile Include="RuleEngine\RuleResponse.cs" />
+    <Compile Include="Interfaces\IRuleExecutor.cs" />
+    <Compile Include="RuleMediatorPipeline.cs" />
+    <Compile Include="RuleEngine\RuleExecutor.cs" />
+    <Compile Include="RuleEngine\RuleExecutionResponse.cs" />
     <Compile Include="RuleEngine\BaseCondition.cs" />
     <Compile Include="RuleEngine\BaseRule.cs" />
-    <Compile Include="Handlers\PointRulePostHandler.cs" />
-    <Compile Include="Handlers\PointPointRulePreHandler.cs" />
-    <Compile Include="Handlers\PointAlarmRuleHandler.cs" />
+    <Compile Include="Handlers\HighAlarmRulePostHandler.cs" />
+    <Compile Include="Handlers\HighAlarmRulePreHandler.cs" />
+    <Compile Include="Handlers\HighAlarmRuleHandler.cs" />
     <Compile Include="Interfaces\ICondition.cs" />
     <Compile Include="RuleEngine\IntegerGreaterThanCondition.cs" />
     <Compile Include="RuleEngine\IntegerGreaterThanRule.cs" />
-    <Compile Include="Interfaces\IPointRulePostHandler.cs" />
-    <Compile Include="Interfaces\IPointRulePreHandler.cs" />
+    <Compile Include="Interfaces\IRulePostHandler.cs" />
+    <Compile Include="Interfaces\IRulePreHandler.cs" />
     <Compile Include="Interfaces\IRule.cs" />
-    <Compile Include="Interfaces\IPointRuleHandler.cs" />
+    <Compile Include="Interfaces\IRuleHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
