Refactoring and minor rule additions

--- a/ConsoleApplication1.csproj
+++ b/ConsoleApplication1.csproj
@@ -49,56 +49,55 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompositionRoot\Bootstrapper.cs" />
-    <Compile Include="Handlers\DigitalFallingEdgeRuleHandler.cs" />
-    <Compile Include="Handlers\HighWarningRulePostHandler.cs" />
-    <Compile Include="Handlers\HighWarningRulePreHandler.cs" />
-    <Compile Include="Handlers\LowAlarmRuleHandler.cs" />
-    <Compile Include="Handlers\LowAlarmRulePostHandler.cs" />
-    <Compile Include="Handlers\LowAlarmRulePreHandler.cs" />
-    <Compile Include="Handlers\LowWarningRuleHandler.cs" />
-    <Compile Include="Handlers\LowWarningRulePostHandler.cs" />
-    <Compile Include="Handlers\LowWarningRulePreHandler.cs" />
-    <Compile Include="Handlers\DigitalRisingEdgeRuleHandler.cs" />
-    <Compile Include="Handlers\HighWarningRuleHandler.cs" />
-    <Compile Include="Interfaces\IRuleContextProvider.cs" />
+    <Compile Include="RuleHandlers\DigitalFallingEdgeRuleHandler.cs" />
+    <Compile Include="RuleHandlers\HighWarningPostRuleHandler.cs" />
+    <Compile Include="RuleHandlers\HighWarningPreRuleHandler.cs" />
+    <Compile Include="RuleHandlers\LowAlarmRuleHandler.cs" />
+    <Compile Include="RuleHandlers\LowAlarmPostRuleHandler.cs" />
+    <Compile Include="RuleHandlers\LowAlarmPreRuleHandler.cs" />
+    <Compile Include="RuleHandlers\LowWarningRuleHandler.cs" />
+    <Compile Include="RuleHandlers\LowWarningPostRuleHandler.cs" />
+    <Compile Include="RuleHandlers\LowWarningPreRuleHandler.cs" />
+    <Compile Include="RuleHandlers\DigitalRisingEdgeRuleHandler.cs" />
+    <Compile Include="RuleHandlers\HighWarningRuleHandler.cs" />
     <Compile Include="Interfaces\IRuleContext.cs" />
-    <Compile Include="DoubleRuleContext.cs" />
-    <Compile Include="RuleContextProvider.cs" />
-    <Compile Include="Rules\DigitalFallingEdgeRuleExecutor.cs" />
-    <Compile Include="Rules\LowAlarmRuleExecutor.cs" />
-    <Compile Include="Rules\LowWarningRuleExecutor.cs" />
-    <Compile Include="RuleEngine\DoubleEqualToCondition.cs" />
-    <Compile Include="RuleEngine\DoubleEqualToRule.cs" />
+    <Compile Include="Interfaces\IRuleEngineFactory.cs" />
+    <Compile Include="RuleEngine\CurrentStateType.cs" />
+    <Compile Include="RuleEngine\PointRuleContext.cs" />
+    <Compile Include="RuleExecutors\DigitalFallingEdgeRuleExecutor.cs" />
+    <Compile Include="RuleExecutors\LowAlarmRuleExecutor.cs" />
+    <Compile Include="RuleExecutors\LowWarningRuleExecutor.cs" />
+    <Compile Include="RuleConditions\DoubleEqualToCondition.cs" />
+    <Compile Include="Rules\DoubleEqualToRule.cs" />
     <Compile Include="RuleEngine\DoubleEqualToRuleFactory.cs" />
-    <Compile Include="RuleEngine\DoubleGreaterThanCondition.cs" />
-    <Compile Include="RuleEngine\DoubleGreaterThanEqualToRule.cs" />
+    <Compile Include="RuleConditions\DoubleGreaterThanCondition.cs" />
+    <Compile Include="Rules\DoubleGreaterThanEqualToRule.cs" />
     <Compile Include="RuleEngine\DoubleGreaterThanEqualToRuleFactory.cs" />
-    <Compile Include="RuleEngine\DoubleGreaterThanRule.cs" />
+    <Compile Include="Rules\DoubleGreaterThanRule.cs" />
     <Compile Include="RuleEngine\DoubleGreaterThanRuleFactory.cs" />
-    <Compile Include="RuleEngine\DoubleLessThanCondition.cs" />
-    <Compile Include="RuleEngine\DoubleLessThanRule.cs" />
+    <Compile Include="RuleConditions\DoubleLessThanCondition.cs" />
+    <Compile Include="Rules\DoubleLessThanRule.cs" />
     <Compile Include="RuleEngine\DoubleLessThanRuleFactory.cs" />
     <Compile Include="RuleEngine\IntegerLessThanRuleFactory.cs" />
     <Compile Include="Interfaces\IRuleFactory.cs" />
-    <Compile Include="Rules\HighAlarmRuleExecutor.cs" />
-    <Compile Include="Rules\DigitalRisingEdgeRuleExecutor.cs" />
-    <Compile Include="Rules\HighWarningRuleExecutor.cs" />
+    <Compile Include="RuleExecutors\HighAlarmRuleExecutor.cs" />
+    <Compile Include="RuleExecutors\DigitalRisingEdgeRuleExecutor.cs" />
+    <Compile Include="RuleExecutors\HighWarningRuleExecutor.cs" />
     <Compile Include="Interfaces\IRuleEngine.cs" />
     <Compile Include="Interfaces\RuleEngine.cs" />
     <Compile Include="Interfaces\IRuleExecutor.cs" />
     <Compile Include="RuleMediatorPipeline.cs" />
-    <Compile Include="RuleEngine\RuleExecutor.cs" />
     <Compile Include="RuleEngine\RuleExecutionResponse.cs" />
     <Compile Include="RuleEngine\BaseCondition.cs" />
     <Compile Include="RuleEngine\BaseRule.cs" />
-    <Compile Include="Handlers\HighAlarmRulePostHandler.cs" />
-    <Compile Include="Handlers\HighAlarmRulePreHandler.cs" />
-    <Compile Include="Handlers\HighAlarmRuleHandler.cs" />
+    <Compile Include="RuleHandlers\HighAlarmPostRuleHandler.cs" />
+    <Compile Include="RuleHandlers\HighAlarmPreRuleHandler.cs" />
+    <Compile Include="RuleHandlers\HighAlarmRuleHandler.cs" />
     <Compile Include="Interfaces\ICondition.cs" />
-    <Compile Include="RuleEngine\IntegerGreaterThanCondition.cs" />
-    <Compile Include="RuleEngine\IntegerGreaterThanRule.cs" />
-    <Compile Include="Interfaces\IRulePostHandler.cs" />
-    <Compile Include="Interfaces\IRulePreHandler.cs" />
+    <Compile Include="RuleConditions\IntegerGreaterThanCondition.cs" />
+    <Compile Include="Rules\IntegerGreaterThanRule.cs" />
+    <Compile Include="Interfaces\IPostRuleHandler.cs" />
+    <Compile Include="Interfaces\IPreRuleHandler.cs" />
     <Compile Include="Interfaces\IRule.cs" />
     <Compile Include="Interfaces\IRuleHandler.cs" />
     <Compile Include="Program.cs" />
