--- a/ConsoleApplication1.csproj
+++ b/ConsoleApplication1.csproj
@@ -33,13 +33,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.ServiceBus, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\WindowsAzure.ServiceBus.3.0.3\lib\net45-full\Microsoft.ServiceBus.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAzure.Configuration, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.WindowsAzure.ConfigurationManager.1.7.0.0\lib\net35-full\Microsoft.WindowsAzure.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="SimpleInjector, Version=3.0.5.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
       <HintPath>..\packages\SimpleInjector.3.0.5\lib\net45\SimpleInjector.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,9 +58,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Azure\INetlinkServiceBusMessage.cs" />
+    <Compile Include="Azure\IServiceBusQueueNameFactory.cs" />
+    <Compile Include="Azure\IServiceBusClient.cs" />
+    <Compile Include="Azure\IServiceBusConnectionStringFactory.cs" />
+    <Compile Include="Azure\NetlinkPointNotificationMessage.cs" />
+    <Compile Include="Azure\NotificationsQueueConnectionStringFactory.cs" />
+    <Compile Include="Azure\NotificationsServiceBusQueueNameFactory.cs" />
+    <Compile Include="Azure\NetlinkServiceBusClient.cs" />
     <Compile Include="CompositionRoot\Bootstrapper.cs" />
     <Compile Include="RuleEngine\DoubleRuleEngineFactory.cs" />
-    <Compile Include="RuleHandlers\DigitalFallingEdgeRuleHandler.cs" />
+    <Compile Include="RuleHandlers\FallingEdgePostRuleHandler.cs" />
+    <Compile Include="RuleHandlers\FallingEdgePreRuleHandler.cs" />
+    <Compile Include="RuleHandlers\FallingEdgeRuleHandler.cs" />
     <Compile Include="RuleHandlers\HighWarningPostRuleHandler.cs" />
     <Compile Include="RuleHandlers\HighWarningPreRuleHandler.cs" />
     <Compile Include="RuleHandlers\LowAlarmRuleHandler.cs" />
@@ -59,13 +79,15 @@
     <Compile Include="RuleHandlers\LowWarningRuleHandler.cs" />
     <Compile Include="RuleHandlers\LowWarningPostRuleHandler.cs" />
     <Compile Include="RuleHandlers\LowWarningPreRuleHandler.cs" />
-    <Compile Include="RuleHandlers\DigitalRisingEdgeRuleHandler.cs" />
+    <Compile Include="RuleHandlers\RisingEdgePostRuleHandler.cs" />
+    <Compile Include="RuleHandlers\RisingEdgePreRuleHandler.cs" />
+    <Compile Include="RuleHandlers\RisingEdgeRuleHandler.cs" />
     <Compile Include="RuleHandlers\HighWarningRuleHandler.cs" />
     <Compile Include="Interfaces\IRuleContext.cs" />
     <Compile Include="Interfaces\IRuleEngineFactory.cs" />
     <Compile Include="RuleEngine\CurrentStateType.cs" />
     <Compile Include="RuleEngine\PointRuleContext.cs" />
-    <Compile Include="RuleExecutors\DigitalFallingEdgeRuleExecutor.cs" />
+    <Compile Include="RuleExecutors\FallingEdgeRuleExecutor.cs" />
     <Compile Include="RuleExecutors\LowAlarmRuleExecutor.cs" />
     <Compile Include="RuleExecutors\LowWarningRuleExecutor.cs" />
     <Compile Include="RuleConditions\DoubleEqualToCondition.cs" />
@@ -82,7 +104,7 @@
     <Compile Include="RuleEngine\IntegerLessThanRuleFactory.cs" />
     <Compile Include="Interfaces\IRuleFactory.cs" />
     <Compile Include="RuleExecutors\HighAlarmRuleExecutor.cs" />
-    <Compile Include="RuleExecutors\DigitalRisingEdgeRuleExecutor.cs" />
+    <Compile Include="RuleExecutors\RisingEdgeRuleExecutor.cs" />
     <Compile Include="RuleExecutors\HighWarningRuleExecutor.cs" />
     <Compile Include="Interfaces\IRuleEngine.cs" />
     <Compile Include="RuleEngine\RuleEngine.cs" />
@@ -108,6 +130,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
